--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
 				<h3 id="importantdates">Important Dates</h3>
 				<p class="text-justify">
 					<ul>
-						<li>Paper Submission Deadline: TBA</li>
-						<li>Decision Notification: TBA</li>
-						<li>Camera Ready Paper Deadline: TBA</li>
+						<li>Paper submissions due: June 25, 2023</li>
+						<li>Notification of paper decisions: July 16, 2023</li>
+						<li>Camera ready papers due: July 30, 2023</li>
 						<li>Workshop Date: TBA</li>
 
 					</ul>
