--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			</ul>
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item"><a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a></li>
-				<li class="nav-item"><a class="nav-link" href="index.html#cfp" >Call for Paper</a></li>	
+				<li class="nav-item"><a class="nav-link" href="index.html#cfp" >Call for Papers</a></li>	
 				<li class="nav-item"><a class="nav-link" href="index.html#importantdates" >Important Dates</a></li>	
 				<li class="nav-item"><a class="nav-link" href="index.html#organizers" >Organizers</a></li>
 				<li class="nav-item"><a class="nav-link" href="index.html#technicalcommittee" >Technical Committee</a></li> 
@@ -90,7 +90,7 @@
 				<hr/>
 				
 				
-				<h3 id="cfp">Call for Paper</h3>
+				<h3 id="cfp">Call for Papers</h3>
 				<p class="text-justify">
 					In this workshop, we will examine the technical and research progress towards accountable and
 					responsible AI in medical image analysis, computer-aided diagnosis, and computer assisted
@@ -123,7 +123,7 @@
 						<li>Paper submissions due: June 25, 2023</li>
 						<li>Notification of paper decisions: July 16, 2023</li>
 						<li>Camera ready papers due: July 30, 2023</li>
-						<li>Workshop Date: TBA</li>
+						<li>Workshop date: TBA</li>
 
 					</ul>
 				</p> 
