--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 				<li class="nav-item"><a class="nav-link" href="index.html#cfp" >Call for Papers</a></li>
 				<li class="nav-item"><a class="nav-link" href="index.html#importantdates" >Important Dates</a></li>	
 				<li class="nav-item"><a class="nav-link" href="index.html#submission" >Submission</a></li>	
+				<li class="nav-item"><a class="nav-link" href="index.html#speaker" >Speaker</a></li> 
 				<li class="nav-item"><a class="nav-link" href="index.html#organizers" >Organizers</a></li>
-				<!-- <li class="nav-item"><a class="nav-link" href="index.html#technicalcommittee" >Technical Committee</a></li>  -->
+
 				                   			
 			</ul>
         </div>
@@ -128,10 +129,10 @@
 				<h3 id="importantdates">Important Dates</h3>
 				<p class="text-justify">
 					<ul>
-						<li>Paper submissions due: June 25, 2023</li>
-						<li>Notification of paper decisions: July 16, 2023</li>
-						<li>Camera ready papers due: July 30, 2023</li>
-						<li>Workshop dates: October 8 & October 12, 2023</li>
+						<li>Paper submissions due: Jul 1, 2023 (AoE)</li>
+						<li>Notification of paper decisions: Aug 1, 2023</li>
+						<li>Camera ready papers due: Aug 14, 2023</li>
+						<li>Workshop date: Oct 8, 2023</li>
 
 					</ul>
 				</p> 
@@ -168,8 +169,41 @@
 	<!-- /.container -->			
 
 
+	<div class="container">
+		<div class="row">
+			
+			    <div class="col-lg-12">
+					<h3 id="speaker">Keynote Speaker</h3>
+				</div>
+			    <div class="col-lg-1"></div>
+				<div class="col-lg-2">
+					<img class="img-thumbnail"  src="asset/photo_key1_fei_wang.jpeg" alt="profile photo">
+					<p class="text-center">Fei Wang, PhD<br/><small><i>Cornell University</i></small></p>
+				</div>
 
+				<div class="col-lg-1"></div>
+				<div class="col-lg-8">
+					<p class="text-left"><b>Bio</b>: Fei Wang is currently an Associate Professor of Health Informatics in Department of Population Health Sciences at Weill Cornell Medicine. 
+						His research interest is machine learning and artificial intelligence in biomedicine. 
+						He is the Founding Director of the WCM Insistute of AI for Digital Health (AIDH). 
+						Dr. Wang has published on major AI venues including Neurips, ICML, AAAI and KDD, as well as major medical venues including Nature Medicine, Annals of Internal Medicine and JAMA Internal Medicine. 
+						Dr. Wang is an elected fellow of AMIA, ACMI and IAHSI, and a distinguished member of ACM. 
+						Dr. Wang's research has been extensively funded by federal agencies including NIH, NSF and ONR, priviate foundations including MJFF and ASA, as well as industries such as Amazon, Google, Boerhinger Ingelheim and Sanofi.</p>
+						<p class="text-left"><b>Title</b>: TBD</p>
+					<p class="text-left"><b>Abstract</b>: TBD</p>
+				</div>
+
+
+		
+		
+		</div>
+		<hr/>
+		<!-- /.row -->
+	</div>
+	<!-- /.container -->
 	
+
+
 	<div class="container">
 		<div class="row">
 			
