--- a/index.html
+++ b/index.html
@@ -155,9 +155,12 @@
 					<br/><br/>
 					
 					<h5>Submission Guidelines</h5>
-					Please carefully read the <a href="https://conferences.miccai.org/2023/en/PAPER-SUBMISSION-AND-REBUTTAL-GUIDELINES.html">Submission Guidelines</a> 
-					of MICCAI 2023 when preparing your submission. Follow the LaTeX and MS Word templates available at <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">Lecture Notes in Computer Science
-					</a> to prepare your manuscript and submit your manuscript using <a href="https://cmt3.research.microsoft.com/CAREAI2023/">Conference Management Toolkit (CMT)</a> website.
+					<!-- Please carefully read the <a href="https://conferences.miccai.org/2023/en/PAPER-SUBMISSION-AND-REBUTTAL-GUIDELINES.html">Submission Guidelines</a> 
+					of MICCAI 2023 when preparing your submission.  -->
+					Submission is open for both short and full length paper. 
+					Follow the LaTeX and MS Word templates available at <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">Lecture Notes in Computer Science
+					</a> to prepare your manuscript and submit your manuscript using <a href="https://cmt3.research.microsoft.com/CAREAI2023/">Conference Management Toolkit (CMT)</a> website. 
+					Submission must be anonymized.
 				</p> 
 				<hr/>
 	
