--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 			
 			<div class="col-lg-12">
 
-				<marquee class="text-primary"> 
+<!-- 				<marquee class="text-primary"> 
 					Accepted papers will be included in the joint proceedings of MICCAI 2023 satellite 
 					events published by Springer Nature Lecture Notes in Computer Science (LNCS) series. 
 					Stay tuned for more update.
-				</marquee>
+				</marquee> -->
 
 				<div class="jumbotron">
 					<h4 class="text-center" >MICCAI 2023 Workshop Event</h4>
@@ -130,8 +130,8 @@
 				<p class="text-justify">
 					<ul>
 						<li>Paper submissions due: Jul 1, 2023 (AoE)</li>
-						<li>Notification of paper decisions: Aug 1, 2023</li>
-						<li>Camera ready papers due: Aug 14, 2023</li>
+						<li>Notification of paper decisions: Aug 3, 2023</li>
+						<li>Camera ready papers due: Aug 10, 2023</li>
 						<li>Workshop date: Oct 8, 2023</li>
 
 					</ul>
@@ -161,6 +161,8 @@
 					Follow the LaTeX and MS Word templates available at <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">Lecture Notes in Computer Science
 					</a> to prepare your manuscript and submit your manuscript using <a href="https://cmt3.research.microsoft.com/CAREAI2023/">Conference Management Toolkit (CMT)</a> website. 
 					Submission must be anonymized.
+
+
 				</p> 
 				<hr/>
 	
