--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
 			    <div class="col-lg-12">
 					<h3 id="schedule">Program Schedule</h3>
 					<p><a href="https://conferences.miccai.org/2023/en/SATELLITE-EVENTS.html">MICCAI 2023 Satellite Events Schedule</a></p>
-					<p> Care-AI workshop will be jointly host with iMIMIC workshop on <u>Oct 8, 2023 (9:00 AM - 12:00 PM)</u> at Meeting Room 5, Vancouver Convention Center East Building Level 1, Vancouver, Canada</p>
+					<p> Care-AI workshop will be jointly host with iMIMIC workshop on <u>Oct 8, 2023 (9:00 AM - 12:00 PM)</u> at Meeting Room 5, Vancouver Convention Center East Building Level 1, Vancouver, Canada. 
+					Poster session will be at Poster Hall at Ground Level Exhibition B-C.</p>
 				</div>
 				<div class="col-lg-8">
 					
@@ -237,9 +238,9 @@
 						He is the Founding Director of the WCM Insistute of AI for Digital Health (AIDH). 
 						Dr. Wang has published on major AI venues including Neurips, ICML, AAAI and KDD, as well as major medical venues including Nature Medicine, Annals of Internal Medicine and JAMA Internal Medicine. 
 						Dr. Wang is an elected fellow of AMIA, ACMI and IAHSI, and a distinguished member of ACM. 
-						Dr. Wang's research has been extensively funded by federal agencies including NIH, NSF and ONR, priviate foundations including MJFF and ASA, as well as industries such as Amazon, Google, Boerhinger Ingelheim and Sanofi.</p>
-						<p class="text-left"><b>Title</b>: TBD</p>
-					<p class="text-left"><b>Abstract</b>: TBD</p>
+						Dr. Wang's research has been extensively funded by federal agencies including NIH, NSF and ONR, priviate foundations including MJFF and ASA, as well as industries such as Amazon, Google, Boerhinger Ingelheim and Sanofi.
+					</p>
+					<p class="text-left"><b>Title</b>: Multi-Modal Learning in Biomedicine</p>
 				</div>
 
 
