--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
 			</ul>
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item"><a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a></li>
-				<li class="nav-item"><a class="nav-link" href="index.html#cfp" >Call for Papers</a></li>
-				<li class="nav-item"><a class="nav-link" href="index.html#importantdates" >Important Dates</a></li>	
-				<li class="nav-item"><a class="nav-link" href="index.html#submission" >Submission</a></li>	
-				<li class="nav-item"><a class="nav-link" href="index.html#schedule" >Program Schedule</a></li> 
-				<li class="nav-item"><a class="nav-link" href="index.html#speaker" >Keynote Speaker</a></li> 
-				<li class="nav-item"><a class="nav-link" href="index.html#organizers" >Organizers</a></li>
-				<li class="nav-item"><a class="nav-link" href="https://conferences.miccai.org/2023/en/MICCAI2022-ATTEND.html" >Attend</a></li>
+				<li class="nav-item"><a class="nav-link" href="index.html#cfp">Call for Papers</a></li>
+				<li class="nav-item"><a class="nav-link" href="index.html#importantdates">Important Dates</a></li>	
+				<li class="nav-item"><a class="nav-link" href="index.html#submission">Submission</a></li>	
+				<li class="nav-item"><a class="nav-link" href="index.html#schedule">Program Schedule</a></li> 
+				<li class="nav-item"><a class="nav-link" href="index.html#speaker">Keynote Speaker</a></li> 
+				<li class="nav-item"><a class="nav-link" href="index.html#organizers">Organizers</a></li>
+				<li class="nav-item"><a class="nav-link" href="https://conferences.miccai.org/2023/en/MICCAI2022-ATTEND.html">Attend</a></li>
+				<li class="nav-item"><a class="nav-link" href="https://link.springer.com/book/10.1007/978-3-031-47401-9">Proceeding</a></li>
 
 				                   			
 			</ul>
