--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
     <!-- Footer -->
     <footer class="py-2 bg-dark">
       <div class="container">
-		<p class="m-0 text-center text-white">If you have any question, please <a href="mailto:careai-miccai@googlegroups.com" target="_blank">Contact Us</a></p>
+		<p class="m-0 text-center text-white">If you have any question, please <a href="" target="_blank">Contact Us</a></p>
         <p class="m-0 text-center text-white">Copyright &copy; CAREAI 2023</p>
       </div>
       <!-- /.container -->
